BUG: IntervalIndex.get_indexer raising for read only array (#53703)

--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -401,7 +401,7 @@ Strings
 
 Interval
 ^^^^^^^^
--
+- :meth:`pd.IntervalIndex.get_indexer` and :meth:`pd.IntervalIndex.get_indexer_nonunique` raising if ``target`` is read-only array (:issue:`53703`)
 -
 
 Indexing
