--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -27,6 +27,14 @@ Copy-on-Write improvements
   of those Index objects for the columns of the DataFrame (:issue:`52947`)
 - Add lazy copy mechanism to :meth:`DataFrame.eval` (:issue:`53746`)
 
+- Trying to operate inplace on a temporary column selection
+  (for example, ``df["a"].fillna(100, inplace=True)``)
+  will now always raise a warning when Copy-on-Write is enabled. In this mode,
+  operating inplace like this will never work, since the selection behaves
+  as a temporary copy. This holds true for:
+
+  - DataFrame.fillna / Series.fillna
+
 .. _whatsnew_210.enhancements.enhancement2:
 
 ``map(func, na_action="ignore")`` now works for all array types
