--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -242,7 +242,7 @@ See :ref:`install.dependencies` and :ref:`install.optional_dependencies` for mor
 
 Other API changes
 ^^^^^^^^^^^^^^^^^
--
+- :class:`arrays.PandasArray` has been renamed ``NumpyExtensionArray``; importing ``PandasArray`` still works until the next major version (:issue:`53694`)
 
 .. ---------------------------------------------------------------------------
 .. _whatsnew_210.deprecations:
